[package]
name = "iora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
quick-xml = { version = "0.26.0", features = ["serialize"] }
regex = "1.7.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0"
tracing = "0.1"