[package]
name = "iora_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
bb8 = "0.8.0"
clap = { version = "4.0.18", features = ["derive"] }
config = { version = "0.13.1", features = ["toml"] }
iora = { path = "../iora" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }